@@ -1,3 +1,8 @@
+2012-03-31  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/ia64/unwind-ia64.c (uw_install_context): Manually save LC
+	if it hasn't been previously saved.
+
 2012-03-28  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-28 mainline r185907.
